--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "pure": "~0.3.0",
     "modernizr": "~2.6.2",
-    "typeplate": "~1.1.2"
+    "typeplate": "~1.1.2",
+    "font-awesome": "~4.0.3"
   }
 }
