--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,10 @@
 {
-  "name": "example-app",
-  "version": "0.0.1",
+  "name": "mumonkan",
+  "version": "0.0.3",
   "dependencies": {
     "pure": "~0.3.0",
     "modernizr": "~2.6.2",
-    "typeplate": "typeplate-starter-kit#~1.1.4"
+    "typeplate": "typeplate-starter-kit#~1.1.4",
+    "font-awesome": "~4.2.0"
   }
 }
